Cleanup: 'ExceptionCode& ec', not 'ExceptionCode &ec'. https://bugs.webkit.org/show_bug.cgi?id=108769

Reviewed by Eric Seidel.

Does what it says on the tin: reference parameters should read
'type& name', and this patch fixes the two occurances of 'type &name'
that cropped up for ExceptionCode.

Pure style change; no effect on behavior.

* html/HTMLOptionsCollection.cpp:
(WebCore::HTMLOptionsCollection::add):


Canonical link: https://commits.webkit.org/126979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141717 268f45cc-cd09-0410-ab3c-d52691b4dbfc